chore: prepare 0.1.0 release